--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Pumpkin Carving Ideas</h1>
+    <h1 class="heading">Pumpkin Carving Ideas</h1>
 
     <div class="container">
         <div class="slideshow">
@@ -21,7 +21,7 @@
                     <img src="../pumpkin5.jpeg" alt="Scared Pumpkin">
                 </div>
             </div>
-            
+
         </div>
     </div>
 </body>
